show products in vendor admin, show new products on frontpage, add cagetories and search on the menu

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -27,3 +27,15 @@
 .input, .button {
     border-radius: 0;
 }
+
+/******************
+* Product list item
+*******************/
+
+.product-list-item .box .subtitle {
+    margin-bottom: 0;
+}
+
+.product-list-item .box .price {
+    color: #888;
+}
